<resources>
    <string name="app_name">Quick Access GPS</string>
    <string name="address">Address</string>
    <string name="add_address_button">Add address button</string>
    <string name="favorite_or_unfavorite_an_address">Favorite or unfavorite an address</string>
    <string name="addresses">Addresses</string>
    <string name="add_address">Add Address</string>
    <string name="cancel_add_address">Cancel add address</string>
    <string name="address_name">Address Name</string>
    <string name="name">Name:</string>
    <string name="address_text">Address:</string>
    <string name="address_hint">Address</string>
    <string name="submit">Submit</string>
    <string name="title_activity_address">Address</string>
    <string name="navigate">Navigate</string>
    <string name="share">Share</string>
    <string name="default_notification_channel_id">share</string>
    <string name="email_to_share_to">Email to share to</string>
</resources>